--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "shared-modules"]
 	path = shared-modules
 	url = git://github.com/flathub/shared-modules.git
+[submodule "flathub/shared-modules"]
+	path = flathub/shared-modules
+	url = git://github.com/flathub/shared-modules.git
